--- a/PalladiumDwh.Core/PalladiumDwh.Core.csproj
+++ b/PalladiumDwh.Core/PalladiumDwh.Core.csproj
@@ -93,7 +93,10 @@
     <Compile Include="Interfaces\IFacilityRepository.cs" />
     <Compile Include="Interfaces\IPatientVisitRepository.cs" />
     <Compile Include="Interfaces\ISyncService.cs" />
+    <Compile Include="Interfaces\Sync\ISyncExtract.cs" />
     <Compile Include="Model\ActionRegister.cs" />
+    <Compile Include="Model\PatientExtractDto.cs" />
+    <Compile Include="Model\PatientPlaceHolderDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AppServices.cs" />
     <Compile Include="Services\LiveSyncService.cs" />
@@ -101,6 +104,7 @@
     <Compile Include="Services\MessagingSenderService.cs" />
     <Compile Include="Services\MessagingService.cs" />
     <Compile Include="Services\SyncService.cs" />
+    <Compile Include="Services\Sync\SmartSyncExtracts.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PalladiumDwh.Shared\PalladiumDwh.Shared.csproj">
