initial stage Patients

--- a/PalladiumDwh.Core.Tests/packages.config
+++ b/PalladiumDwh.Core.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="10.1.1" targetFramework="net462" />
   <package id="Castle.Core" version="4.4.0" targetFramework="net462" />
   <package id="CSharpFunctionalExtensions" version="2.0.0" targetFramework="net462" />
   <package id="Dapper" version="1.50.4" targetFramework="net462" />
@@ -12,7 +13,10 @@
   <package id="NMemory" version="1.1.2" targetFramework="net462" />
   <package id="NUnit" version="3.9.0" targetFramework="net462" />
   <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net462" />
+  <package id="StructureMap" version="4.7.1" targetFramework="net462" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net462" />
   <package id="Z.Dapper.Plus" version="1.3.25" targetFramework="net462" />
+  <package id="log4net" version="2.0.8" targetFramework="net462" />
 </packages>
