--- a/PalladiumDwh.Infrastructure.Tests/database.config
+++ b/PalladiumDwh.Infrastructure.Tests/database.config
@@ -1,7 +1,7 @@
 <connectionStrings>
   <add
     name="DWAPICentral"
-    connectionString="Data Source=41.206.32.50;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=hts;Password=c0nstella;MultipleActiveResultSets=True;Pooling=True"
-    providerName="System.Data.SqlClient" 
+    connectionString="Data Source=.\koske17;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=hts;Password=c0nstella;MultipleActiveResultSets=True;Pooling=True"
+    providerName="System.Data.SqlClient"
     />
 </connectionStrings>
