--- a/PalladiumDwh.DWapi/database.config
+++ b/PalladiumDwh.DWapi/database.config
@@ -4,4 +4,9 @@
     connectionString="Data Source=.\koske17;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient"
   />
+  <add
+    name="DWAPICentralHangfire"
+    connectionString="Data Source=.\koske17;Initial Catalog=DWAPICentralHangfire;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
+    providerName="System.Data.SqlClient"
+  />
 </connectionStrings>
