--- a/PalladiumDwh.DWapi/packages.config
+++ b/PalladiumDwh.DWapi/packages.config
@@ -1,11 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net462" />
+  <package id="AutoMapper" version="10.1.1" targetFramework="net462" />
   <package id="bootstrap" version="3.3.7" targetFramework="net462" />
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net462" />
   <package id="CSharpFunctionalExtensions" version="2.0.0" targetFramework="net462" />
   <package id="Dapper" version="1.50.4" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
+  <package id="Hangfire.AspNet" version="0.2.0" targetFramework="net462" />
+  <package id="Hangfire.Core" version="1.7.28" targetFramework="net462" />
+  <package id="Hangfire.SqlServer" version="1.7.28" targetFramework="net462" />
   <package id="jQuery" version="3.2.1" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net462" />
@@ -20,8 +24,8 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net462" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.2.2" targetFramework="net462" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net462" developmentDependency="true" />
-  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net462" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net462" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net462" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Modernizr" version="2.8.3" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
@@ -29,7 +33,7 @@
   <package id="Quartz" version="3.0.7" targetFramework="net462" />
   <package id="Quartz.Serialization.Json" version="3.0.7" targetFramework="net462" />
   <package id="Respond" version="1.4.2" targetFramework="net462" />
-  <package id="StructureMap" version="4.7.0" targetFramework="net462" />
+  <package id="StructureMap" version="4.7.1" targetFramework="net462" />
   <package id="StructureMap.MVC5" version="3.1.1.134" targetFramework="net462" />
   <package id="structuremap.web" version="4.0.0.315" targetFramework="net462" />
   <package id="StructureMap.WebApi2" version="3.0.4.125" targetFramework="net462" />
