--- a/PalladiumDwh.DwapiService/packages.config
+++ b/PalladiumDwh.DwapiService/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="10.1.1" targetFramework="net462" />
   <package id="Common.Logging" version="3.4.1" targetFramework="net462" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net462" />
   <package id="CSharpFunctionalExtensions" version="2.0.0" targetFramework="net462" />
@@ -7,7 +8,7 @@
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net462" />
   <package id="Quartz" version="2.5.0" targetFramework="net462" />
-  <package id="StructureMap" version="4.6.0" targetFramework="net462" />
+  <package id="StructureMap" version="4.7.1" targetFramework="net462" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net462" />
   <package id="Z.Dapper.Plus" version="1.3.25" targetFramework="net462" />
 </packages>
