--- a/PalladiumDwh.Infrastructure.Tests/packages.config
+++ b/PalladiumDwh.Infrastructure.Tests/packages.config
@@ -8,5 +8,8 @@
   <package id="NMemory" version="1.1.2" targetFramework="net462" />
   <package id="NUnit" version="3.9.0" targetFramework="net462" />
   <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net462" />
+  <package id="StructureMap" version="4.7.1" targetFramework="net462" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net462" />
   <package id="Z.Dapper.Plus" version="1.3.25" targetFramework="net462" />
+  <package id="log4net" version="2.0.8" targetFramework="net462" />
 </packages>
