--- a/PalladiumDwh.Shared.Tests/packages.config
+++ b/PalladiumDwh.Shared.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="10.1.1" targetFramework="net462" />
   <package id="CSharpFunctionalExtensions" version="2.0.0" targetFramework="net462" />
   <package id="FastMember" version="1.1.0" targetFramework="net462" />
   <package id="NBuilder" version="5.0.0" targetFramework="net462" />
