--- a/PalladiumDwh.Shared/packages.config
+++ b/PalladiumDwh.Shared/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="10.1.1" targetFramework="net462" />
   <package id="CSharpFunctionalExtensions" version="2.0.0" targetFramework="net462" />
   <package id="CsvHelper" version="2.16.3.0" targetFramework="net462" />
   <package id="Dapper" version="1.50.4" targetFramework="net462" />
