--- a/PalladiumDwh.Core/PalladiumDwh.Core.csproj
+++ b/PalladiumDwh.Core/PalladiumDwh.Core.csproj
@@ -69,9 +69,43 @@
     <Compile Include="Application\Commands\SyncVisit.cs" />
     <Compile Include="Application\Common\ISourceBag.cs" />
     <Compile Include="Application\MapProfiles\CtProfile.cs" />
+    <Compile Include="Application\Source\AdverseEventSourceBag.cs" />
+    <Compile Include="Application\Source\AllergiesChronicIllnessSourceBag.cs" />
+    <Compile Include="Application\Source\ArtSourceBag.cs" />
+    <Compile Include="Application\Source\BaselineSourceBag.cs" />
+    <Compile Include="Application\Source\ContactListingSourceBag.cs" />
+    <Compile Include="Application\Source\CovidSourceBag.cs" />
+    <Compile Include="Application\Source\DefaulterTracingSourceBag.cs" />
+    <Compile Include="Application\Source\DepressionScreeningSourceBag.cs" />
+    <Compile Include="Application\Source\DrugAlcoholScreeningSourceBag.cs" />
+    <Compile Include="Application\Source\Dto\AllergiesChronicIllnessSourceDto.cs" />
+    <Compile Include="Application\Source\Dto\ArtSourceDto.cs" />
+    <Compile Include="Application\Source\Dto\BaselineSourceDto.cs" />
+    <Compile Include="Application\Source\Dto\ContactListingSourceDto.cs" />
+    <Compile Include="Application\Source\Dto\CovidSourceDto.cs" />
+    <Compile Include="Application\Source\Dto\DefaulterTracingSourceDto.cs" />
+    <Compile Include="Application\Source\Dto\DepressionScreeningSourceDto.cs" />
+    <Compile Include="Application\Source\Dto\DrugAlcoholScreeningSourceDto.cs" />
+    <Compile Include="Application\Source\Dto\EnhancedAdherenceCounsellingSourceDto.cs" />
+    <Compile Include="Application\Source\Dto\IptSourceDto.cs" />
+    <Compile Include="Application\Source\Dto\LaboratorySourceDto.cs" />
+    <Compile Include="Application\Source\Dto\OtzSourceDto.cs" />
+    <Compile Include="Application\Source\Dto\OvcSourceDto.cs" />
     <Compile Include="Application\Source\Dto\PatientSourceDto.cs" />
+    <Compile Include="Application\Source\Dto\PharmacySourceDto.cs" />
+    <Compile Include="Application\Source\Dto\AdverseEventSourceDto.cs" />
+    <Compile Include="Application\Source\Dto\SourceDto.cs" />
+    <Compile Include="Application\Source\Dto\StatusSourceDto.cs" />
     <Compile Include="Application\Source\Dto\VisitSourceDto.cs" />
+    <Compile Include="Application\Source\EnhancedAdherenceCounsellingSourceBag.cs" />
+    <Compile Include="Application\Source\IptSourceBag.cs" />
+    <Compile Include="Application\Source\LaboratorySourceBag.cs" />
+    <Compile Include="Application\Source\OtzSourceBag.cs" />
+    <Compile Include="Application\Source\OvcSourceBag.cs" />
     <Compile Include="Application\Source\PatientSourceBag.cs" />
+    <Compile Include="Application\Source\PharmacySourceBag.cs" />
+    <Compile Include="Application\Source\SourceBag.cs" />
+    <Compile Include="Application\Source\StatusSourceBag.cs" />
     <Compile Include="Application\Source\VisitSourceBag.cs" />
     <Compile Include="Application\Stage\Repositories\IStageAdverseEventExtractRepository.cs" />
     <Compile Include="Application\Stage\Repositories\IStageAllergiesChronicIllnessExtractRepository.cs" />
