--- a/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
+++ b/PalladiumDwh.Infrastructure/PalladiumDwh.Infrastructure.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Data\Repository\Stage\StageDrugAlcoholScreeningExtractRepository.cs" />
     <Compile Include="Data\Repository\Stage\StageEnhancedAdherenceCounsellingExtractRepository.cs" />
     <Compile Include="Data\Repository\Stage\StageExtractRepository.cs" />
+    <Compile Include="Data\Repository\Stage\StageGbvScreeningExtractRepository.cs" />
     <Compile Include="Data\Repository\Stage\StageIptExtractRepository.cs" />
     <Compile Include="Data\Repository\Stage\StageLaboratoryExtractRepository.cs" />
     <Compile Include="Data\Repository\Stage\StageOtzExtractRepository.cs" />
@@ -196,9 +197,9 @@
     <Compile Include="Migrations\202109171334493_CovidNewColsRev.Designer.cs">
       <DependentUpon>202109171334493_CovidNewColsRev.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202203091640558_ExtractStaging.cs" />
-    <Compile Include="Migrations\202203091640558_ExtractStaging.designer.cs">
-      <DependentUpon>202203091640558_ExtractStaging.cs</DependentUpon>
+    <Compile Include="Migrations\202203092018191_ExtractsStaging.cs" />
+    <Compile Include="Migrations\202203092018191_ExtractsStaging.designer.cs">
+      <DependentUpon>202203092018191_ExtractsStaging.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\LiveSeeder.cs" />
@@ -261,8 +262,8 @@
     <EmbeddedResource Include="Migrations\202109171334493_CovidNewColsRev.resx">
       <DependentUpon>202109171334493_CovidNewColsRev.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202203091640558_ExtractStaging.resx">
-      <DependentUpon>202203091640558_ExtractStaging.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202203092018191_ExtractsStaging.resx">
+      <DependentUpon>202203092018191_ExtractsStaging.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Seed\MasterFacility.csv" />
   </ItemGroup>
