--- a/PalladiumDwh.Core.Tests/PalladiumDwh.Core.Tests.csproj
+++ b/PalladiumDwh.Core.Tests/PalladiumDwh.Core.Tests.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Application\Commands\SyncStatusTests.cs" />
     <Compile Include="Application\Commands\SyncVisitTests.cs" />
     <Compile Include="Application\Commands\SyncPatientTests.cs" />
+    <Compile Include="Application\Source\SourceBagTests.cs" />
     <Compile Include="DependencyResolution\DefaultRegistry.cs" />
     <Compile Include="DependencyResolution\IoC.cs" />
     <Compile Include="Model\DTO\FacilityDTOTests.cs" />
