--- a/PalladiumDwh.Core/PalladiumDwh.Core.csproj
+++ b/PalladiumDwh.Core/PalladiumDwh.Core.csproj
@@ -210,9 +210,11 @@
     <Compile Include="Interfaces\IPatientStatusRepository.cs" />
     <Compile Include="Interfaces\IFacilityRepository.cs" />
     <Compile Include="Interfaces\IPatientVisitRepository.cs" />
+    <Compile Include="Interfaces\ISmartActionRegisterRepository.cs" />
     <Compile Include="Interfaces\ISyncService.cs" />
     <Compile Include="Model\ActionRegister.cs" />
     <Compile Include="Model\Dto\PatientExtractHolderDto.cs" />
+    <Compile Include="Model\SmartActionRegister.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AppServices.cs" />
     <Compile Include="Services\LiveSyncService.cs" />
@@ -231,9 +233,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Application\Extracts" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
