--- a/PalladiumDwh.DwapiService/packages.config
+++ b/PalladiumDwh.DwapiService/packages.config
@@ -6,6 +6,7 @@
   <package id="CSharpFunctionalExtensions" version="2.0.0" targetFramework="net462" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net462" />
   <package id="log4net" version="2.0.14" targetFramework="net462" />
+  <package id="MediatR" version="9.0.0" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net462" />
   <package id="Quartz" version="2.5.0" targetFramework="net462" />
   <package id="StructureMap" version="4.7.1" targetFramework="net462" />
