--- a/PalladiumDwh.DWapi/Web.config
+++ b/PalladiumDwh.DWapi/Web.config
@@ -116,6 +116,9 @@
       <setting name="Z_Dapper_Plus_LicenseKey" serializeAs="String">
         <value>218460a6-02d0-c26b-9add-e6b8d13ccbf4</value>
       </setting>
+      <setting name="WorkerCount" serializeAs="String">
+        <value>10</value>
+      </setting>
     </PalladiumDwh.DWapi.Properties.Settings>
   </applicationSettings>
   <quartz>
