--- a/PalladiumDwh.ClientReader.Infrastructure.Tests/database.config
+++ b/PalladiumDwh.ClientReader.Infrastructure.Tests/database.config
@@ -2,12 +2,12 @@
 
   <add
     name="DWAPIRemote"
-    connectionString="Data Source=.\Koske14;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=.;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=Sydney123;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient"
   />
   <add
     name="EMRDatabase"
-    connectionString="Data Source=127.0.0.1\Koske14;Initial Catalog=IQTools_Test;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True"
+    connectionString="Data Source=.;Initial Catalog=IQTools_Test;Persist Security Info=True;User ID=sa;Password=Sydney123;MultipleActiveResultSets=True;Pooling=True"
     providerName="System.Data.SqlClient"
   />
   <!--
