more worker config settings

--- a/PalladiumDwh.DWapi/Web.config
+++ b/PalladiumDwh.DWapi/Web.config
@@ -119,6 +119,15 @@
       <setting name="WorkerCount" serializeAs="String">
         <value>Manifest-10,Patient-10,PatientArt-5,PatientPharmacy-5,PatientVisits-20,PatientStatus-5,Covid-5,DefaulterTracing-1,PatientLabs-5,PatientBaselines-1,PatientAdverseEvents-1,Otz-5,Ovc-5,DepressionScreening-1,DrugAlcoholScreening-1,EnhancedAdherenceCounselling-1,GbvScreening-1,Ipt-1,AllergiesChronicIllness-1,ContactListing-1,default-1</value>
       </setting>
+      <setting name="WorkerComandTimeout" serializeAs="String">
+        <value>30</value>
+      </setting>
+      <setting name="WorkerInvisibilityTimeout" serializeAs="String">
+        <value>30</value>
+      </setting>
+      <setting name="WorkerBatchRetention" serializeAs="String">
+        <value>30</value>
+      </setting>
     </PalladiumDwh.DWapi.Properties.Settings>
   </applicationSettings>
   <quartz>
@@ -140,7 +149,7 @@
     <add key="quartz.jobStore.useProperties" value="false" />
     <add key="quartz.jobStore.selectWithLockSQL" value="SELECT * FROM {0} LOCKS UPDLOCK WHERE LOCK_NAME = @ lockName" />
     <add key="quartz.dataSource.default.connectionStringName" value="QDWAPICentral" />
-    <add key="quartz.dataSource.default.connectionString" value="Data Source=koske-pc01\KOSKE14;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=Sydney123;MultipleActiveResultSets=True;Pooling=True" />
+    <add key="quartz.dataSource.default.connectionString" value="Data Source=.\KOSKE17;Initial Catalog=DWAPICentral;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True;Pooling=True" />
   </quartz>
   <system.codedom>
     <compilers>
